<resources>
    <string name="app_name">Travel_Smart</string>
    <string name="network_wifi_connected">Wi-Fi is available</string>
    <string name="network_mobile_connected">The network is available</string>
    <string name="network_disconnected">The network is unreachable.</string>
    <string name="login_email_input_error">The email was not valid</string>
    <string name="login_password_null">The password field cannot be left blank</string>
    <string name="login_title_name">Log In</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="agree_button">Agree</string>
    <string name="disagree_button">disagree</string>
    <string name="title_activity_trip_pages">Trips</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_format_error">The email format you entered is invalid</string>
    <string name="login_failed">The login credentials you entered are invalid.</string>
    <string name="signup_title_name">Sign Up</string>
    <string name="input_empty_error">All fields are required.</string>
    <string name="ok_button">OK</string>
    <string name="username_length_error">Username must be at least 3 characters.</string>
    <string name="password_length_error">Password must be at least 7 characters.</string>
    <string name="title_activity_legal">Legal</string>
    <string name="title_activity_view_destination">Trip</string>
    <string name="settings_title_name">Settings</string>
    <string name="title_activity_view_health">ViewHealthActivity</string>
    <string name="title_activity_detail_health_con">DetailHealthConActivity</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="title_activity_detail_health_med">DetailHealthMedActivity</string>
    <string name="title_activity_view_embassy">ViewEmbassyActivity</string>
    <string name="title_activity_view_weather">ViewWeatherActivity</string>
    <string name="title_activity_view_alert">ViewAlertActivity</string>
    <string name="title_activity_assistance">AssistanceActivity</string>
    <string name="title_activity_temdeletep">Map</string>
    <string name="title_activity_ace_insurance">AceInsuranceActivity</string>
    <string name="title_activity_view_ace">ViewAceActivity</string>
    <string name="title_activity_view_vmpdf">ViewVMPdfActivity</string>
    <string name="callIntrepidAssistance">Call Intrepid Assistance</string>
    <string name="title_activity_learn_more">LearnMoreActivity</string>
    <!-- ACE Insurance-->
    <string name="ace_information">ACE Information</string>
    <string name="ace_worldview">ACE Worldview</string>
    <string name="ace_insurance">ACE Insurance</string>
    <string name="travel_smart_tagline">Which service would you like to view?</string>
    <!-- Emergency Assistance-->
    <string name="emergency_assistance">Emergency Assistance</string>
    <string name="contact_assistance"  >Contact ACE Assistance</string>
    <!-- Detail Health Conditions & Medications-->
    <string name="description">Description</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention">Prevention/Treatment</string>
    <string name="brand_name">Brand Name</string>
    <string name="side_effects">Side Effects</string>
    <string name="storage">Storage</string>
    <string name="notes">Notes</string>
    <!-- Learn More-->
    <string name="learn_more">Learn More</string>
    <!-- Alerts-->
    <string name="no_alert">No recent alerts</string>
    <string name="alerts">Alerts</string>
    <!-- View Embassy-->
    <string name="overview">Overview</string>
    <string name="embassy">Embassy</string>
    <string name="address">Address</string>
    <string name="contact_information">Contact Information</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="services">Services</string>
    <!-- Health-->
    <string name="health">Health</string>
    <string name="tap_to_search">Tap to Search</string>
    <!-- Security -->
    <string name="security">Security</string>
    <!-- Weather -->
    <string name="weather">Weather</string>
    <!-- Alert List item-->
    <string name="category">Category:</string>
    <string name="category_name">Category Name</string>
    <string name="valid">Valid:</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="please_input_text">Please input keywords</string>
    <string name="trips">Trips</string>
    <string name="country_name">Country Name</string>
    <!-- Drawer Menu-->
    <string name="insurance">Insurance</string>
    <string name="assistance">Assistance</string>
    <string name="settings">Settings</string>
    <string name="embassy_information_not_apply">Embassy information does not apply.</string>
    <!-- Health Pre-Trip -->
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="healthcare_quality">Health Care Quality</string>
    <string name="vaccines_pretrip_medical">Vaccines and Pre-trip Medical</string>
    <string name="health_conditions">Health Conditions</string>
    <!-- Overview Culture -->
    <string name="religion">Religion</string>
    <string name="ethnic_makeup">Ethnic Makeup</string>
    <string name="cultural_norms">Cultural Norms</string>
    <!-- Overview Currency -->
    <string name="cad">CAD</string>
    <string name="one">1.00</string>
    <string name="usd">USD</string>
    <string name="two">2.00</string>
    <!-- Overview General -->
    <string name="location">Location</string>
    <string name="climate">Climate</string>
    <string name="type_of_government">Type of Government</string>
    <string name="visa_requirements">Visa Requirements"</string>
    <string name="communication_infrastructure">Communication Infrastructure</string>
    <string name="electricity">Electricity</string>
    <string name="development">Development</string>
    <string name="money">Money</string>
    <string name="transportation">Transportation</string>
    <string name="holiday">Holidays</string>
    <!-- Legal-->
    <string name="terms_of_use">Terms of Use</string>
    <!-- Tab-->
    <string name="tab">Tab</string>
    <string name="splash_pic">SplashPic</string>
    <!-- Login -->
    <string name="travel_smart">TRAVEL SMART</string>
    <string name="email">EMAIL</string>
    <string name="signup">Signup</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <!-- Signup -->
    <string name="terms_of_use_description">By registering for or using any portion of the Services, I accept the</string>
    <string name="policy_number">POLICY NUMBER</string>
    <string name="username">USERNAME</string>
    <string name="country">COUNTRY</string>
    <!-- Settings-->
    <string name="first_name_hint">First Name:</string>
    <string name="last_name_hint">Last Name:</string>
    <string name="email_hint">Email:</string>
    <string name="username_hint">Username:</string>
    <string name="old_password_hint">Old Password:</string>
    <string name="optional">(Optional)</string>
    <string name="new_password_hint">New Password:</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="version">Version: </string>
</resources>