<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingTop="16dp"
        android:elevation="4dp"
        android:transitionName="actionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameText"
            android:layout_marginTop="20dp"
            android:text="@string/first_name_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/firstNameText"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="#00000000"
            android:inputType="text"
            android:layout_marginStart="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:background="@color/gray"
            android:layout_alignStart="@+id/firstNameEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/firstNameEditText"
            android:layout_marginEnd="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameText"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/firstNameText"
            android:text="@string/last_name_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/lastNameText"
            android:layout_below="@+id/firstNameEditText"
            android:ems="10"
            android:gravity="start"
            android:textColorHint="@color/white"
            android:hint="@string/last_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="#00000000"
            android:inputType="text"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/firstNameEditText"
            android:layout_alignParentTop="false"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium">

        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:layout_alignStart="@+id/lastNameEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/lastNameEditText"
            android:layout_marginEnd="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lastNameText"
            android:text="@string/email_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lastNameEditText"
            android:layout_alignStart="@+id/lastNameEditText"
            android:ems="20"
            android:gravity="start"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="#00000000"
            android:inputType="textEmailAddress"
            android:layout_toEndOf="@+id/emailText"
            android:layout_alignParentTop="false"
            android:layout_marginEnd="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:layout_alignStart="@+id/emailEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/emailEditText"
            android:layout_marginEnd="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameText"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/emailText"
            android:text="@string/username_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/userNameText"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="#00000000"
            android:inputType="text"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/emailEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/emailEditText"
            android:layout_marginEnd="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/userNameEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/userNameEditText"
            android:layout_marginEnd="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/oldPasswordText"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/userNameText"
            android:text="@string/old_password_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/oldPasswordText"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/optional"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="#00000000"
            android:inputType="textPassword"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/userNameEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/userNameEditText"
            android:layout_marginEnd="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/oldPasswordEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/oldPasswordEditText"
            android:layout_marginEnd="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordText"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/oldPasswordText"
            android:text="@string/new_password_hint"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/newPasswordText"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/optional"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="#00000000"
            android:inputType="textPassword"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/oldPasswordEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/oldPasswordEditText"
            android:layout_marginEnd="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/newPasswordEditText"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/newPasswordEditText"
            android:layout_marginEnd="35dp"
            android:textSize="17sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/buttonsection"
        android:layout_below="@+id/inputLayout"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/butUpdate"
            android:text="@string/update"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:background="@drawable/login_btn"
            android:longClickable="false"
            android:clickable="true"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/sign_out"
            android:layout_marginTop="25dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/sign_out"
            android:textColor="#99cc00"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/butUpdate"
            android:linksClickable="false" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentStart="false"
        android:layout_toEndOf="@+id/version_txt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version_num"
            android:textSize="14sp"
            android:layout_alignParentStart="false" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/version_txt"
        android:textSize="13sp"
        android:layout_alignTop="@+id/version"
        android:layout_alignStart="@+id/inputLayout" />
    <include
        android:layout_width="match_parent"
        android:layout_height="25dp"
        layout="@layout/drawer_menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
    </include>
</RelativeLayout>